cmake_minimum_required (VERSION 2.8.12)
project(rsd)
add_definitions(-DGL_GLEXT_PROTOTYPES)
add_subdirectory(libraries/glfw)
add_subdirectory(libraries/glxw)
add_definitions(-std=c++11)
include_directories(libraries/glfw/include)
include_directories(libraries/glm)
include_directories(libraries/glxw/include)
add_subdirectory(source)
